fixing some bugs and working on mobile responsiveness

--- a/src/app.scss
+++ b/src/app.scss
@@ -4,5 +4,31 @@
     background-color: black;
 
    
-
+    .heading {
+        margin-left: 20px;
+        width: calc(100vw - 20vw);
+        overflow: hidden; 
+        border-right: 0.15em solid yellow; 
+        white-space: nowrap; 
+        letter-spacing: 0; 
+        animation: typing 3.5s steps(30, end), blink-caret 0.75s step-end;
+      }
+      @keyframes typing {
+        from {
+          width: 0;
+        }
+        to {
+          width: 100%;
+        }
+      }
+      
+      @keyframes blink-caret {
+        from,
+        to {
+          border-color: transparent;
+        }
+        50% {
+          border-color: orange;
+        }
+      }
 }
