--- a/src/components/Projects/index.scss
+++ b/src/components/Projects/index.scss
@@ -1,6 +1,6 @@
 .projects {
   h1 {
-    margin-left: 29vw;
+    text-align: center
   }
   .carousel {
     margin-left: 0.5vw;
